# chai-thermo

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml  transformer.yaml  transformer_v2_rank.json
data/: wt_sequences.json
notebooks/: 01_data_exploration.ipynb  02_embedding_analysis.ipynb
outputs/: run_summary.csv
outputs/2025_01_initial_baseline/: cv_summary.json
outputs/20260120_140552_chai_mpnn/: config.json
outputs/20260121_092449_mlp_thermompnn_baseline/: config.json  history.json  results.json
outputs/20260121_153218_mpnn_thermompnn_splits/: config.json  eval_test.csv  history.json  results.json
outputs/20260121_154116_mlp_thermompnn_baseline/: config.json  history.json  results.json
outputs/20260122_014558_mpnn_thermompnn_splits_antisymmetric_test/: config.json  history.json  results.json
outputs/20260122_014615_mpnn_thermompnn_splits_test/: config.json  history.json  results.json
outputs/20260122_054138_mpnn_antisym_scaled/: config.json  eval_test.csv  history.json  results.json
outputs/20260123_161412_transformer_test/: config.json  history.json  results.json
outputs/20260123_174723_transformer_test_2/: config.json  history.json  results.json
outputs/20260123_180624_transformer_test_3/: config.json  history.json  (+1 more)
scripts/: 02_extract_embeddings.py  analyze_mutant_discrepancy.py  benchmark_dataloader.py  download_megascale.py  evaluate.py  evaluate_mpnn.py  evaluate_thermompnn_split.py  evaluate_transformer.py  hello.py  precompute.py  test_chai_extraction.py  verify_alignment.py
specs/: chai_thermo_transformer_spec.md
(+348 files in other folders)
