[project]
name = "chai-thermo"
version = "0.1.0"
description = "Protein stability (ΔΔG) prediction using Chai-1 embeddings"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.4.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "datasets>=2.14.0",
    "pyarrow>=12.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "chai-lab>=0.6.1",
    "matplotlib>=3.10.8",
    "scikit-learn>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.2",
]
